work section mobile version onclick fix

--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -31,7 +31,7 @@
             flex-direction: column;
             justify-content: flex-end;
             align-self: flex-end;
-            min-width: 50vw;
+            min-width: 52vw;
             max-height: 100%;
             box-shadow: -3px 60px 128px -36px rgba(78,43,148,1);
 
@@ -77,7 +77,7 @@
         }
         #card-1{
             height: 90%;
-            transform: translate(20vw);
+            transform: translate(25vw);
            background-image: url("../images/weatherapp.jpg");
             background-size: 100% 100%;
             @media only screen and (min-width: 768px){
@@ -88,7 +88,7 @@
         }
 
         #card-2{
-           transform: translate(30vw);
+           transform: translate(35vw);
            height: 70%;
            background-image: url("../images/jsgame.jpg");
             background-size: 100% 100%;
